--- a/index.html
+++ b/index.html
@@ -2,31 +2,60 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>GitHub repo example</title>
+    <title>WorkShop 2 project</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/index.js" />
+    <link rel="stylesheet" href="src/styles.css" />
+  
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <div class="container">
-      <h1>
-        Hosted with
-        <a href="https://www.netlify.com">Netlify</a>
-      </h1>
-      <a href="mailto:matt@delac.io" class="btn btn-primary contact-btn"
-        >Contact me</a
-      >
-      <img
-        src="https://paper-attachments.dropbox.com/s_E2839E24FC7F0728D4D3F0A165AC8F6358478DD8AAADC3C02AA1B3047CC41EA8_1560193451463_image.png"
-        alt=""
-      />
+    <div class="topnav">
+      <form id="CityLookUp">
+        <input type="city" id=city-input placeholder="Search City.." />
+      <input type="submit" value="search">
+      <p>
+    </form>
+    </p>
     </div>
-    <script src="script.js"></script>
+
+    <div class="container" style="width: 28rem;">
+      <h1>San Diego</h1>
+      <div id="current-temp">
+        <h2>
+          ☀Sunny </br>
+          <span id="currentTmpDisplay"><strong>
+            72
+          </strong></span>
+      <a id="fahrenheitTmp">°F</a> 
+              </span>
+        
+              </h2>
+      <p><i>L:46°F/H:79°F</i> </b>
+               <label for="timeOfToday">
+         </label>
+          <div class="todayInfo" id="current-time">TIME</div>
+        </div>
+    </div></p>
+    <br />
+
+      <div class="card-header" style="width: 18rem;">5 day forecast</div>
+      <div class="row"> 
+        <ul class="list-group-flush" style="width: 18rem;">       
+        <li class="list-group-item">Tues☀️ <br />L:47°F / H:78°F</li>
+        <li class="list-group-item">Wed☀️ <br />L:49°F / H:81°F</li>
+        <li class="list-group-item">Thurs☀️ <br />L:51°F / H:82°F</li>
+        <li class="list-group-item">Fri☀️ <br />L:52°F / H:81°F</li>
+        <li class="list-group-item">Sat☀️ <br />L:53°F / H:82°F</li>
+      </ul>
+    </div>
+ 
   </body>
 </html>
