--- a/index.html
+++ b/index.html
@@ -2,60 +2,79 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WorkShop 2 project</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/index.js" />
-    <link rel="stylesheet" href="src/styles.css" />
-  
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Weather App</title>
   </head>
   <body>
-    <div class="topnav">
-      <form id="CityLookUp">
-        <input type="city" id=city-input placeholder="Search City.." />
-      <input type="submit" value="search">
-      <p>
-    </form>
-    </p>
-    </div>
-
-    <div class="container" style="width: 28rem;">
-      <h1>San Diego</h1>
-      <div id="current-temp">
-        <h2>
-          ☀Sunny </br>
-          <span id="currentTmpDisplay"><strong>
-            72
-          </strong></span>
-      <a id="fahrenheitTmp">°F</a> 
-              </span>
-        
-              </h2>
-      <p><i>L:46°F/H:79°F</i> </b>
-               <label for="timeOfToday">
-         </label>
-          <div class="todayInfo" id="current-time">TIME</div>
+    <div class="container">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city.."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+          <div class="overview">
+            <h1 id="city"></h1>
+            <ul>
+              <li>Last updated: <span id="date"></span></li>
+              <li id="description"></li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img src="" alt="Clear" id="icon" class="float-left" />
+                <div class="float-left">
+                  <strong id="temperature"></strong
+                  ><span class="units">°C | <a href="#">°F</a></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> m/h</li>
+              </ul>
+            </div>
+          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
-    </div></p>
-    <br />
-
-      <div class="card-header" style="width: 18rem;">5 day forecast</div>
-      <div class="row"> 
-        <ul class="list-group-flush" style="width: 18rem;">       
-        <li class="list-group-item">Tues☀️ <br />L:47°F / H:78°F</li>
-        <li class="list-group-item">Wed☀️ <br />L:49°F / H:81°F</li>
-        <li class="list-group-item">Thurs☀️ <br />L:51°F / H:82°F</li>
-        <li class="list-group-item">Fri☀️ <br />L:52°F / H:81°F</li>
-        <li class="list-group-item">Sat☀️ <br />L:53°F / H:82°F</li>
-      </ul>
+        <small>
+          <a
+            href="https://github.com/AngelaMoesch123/weather-app-vanilla"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Angela Moesch
+        </small>
+      </div>
     </div>
- 
+    <script src="src/app.js"></script>
   </body>
 </html>
